// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary two and two - small 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-1
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-2
      </Text>
    </View>
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View>
    <Text>
      support-1
    </Text>
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View>
    <Text>
      support-2
    </Text>
  </View>,
]
`;

exports[`2. secondary two and two - medium 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingBottom": 5,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-1
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-2
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingBottom": 5,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        support-1
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        support-2
      </Text>
    </View>
  </View>
</View>
`;

exports[`3. secondary two and two - wide 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 10,
    }
  }
>
  <View
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <Text>
      secondary-1
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "16.6%",
      }
    }
  >
    <Text>
      support-1
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <Text>
      secondary-2
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "16.6%",
      }
    }
  >
    <Text>
      support-2
    </Text>
  </View>
</View>
`;

exports[`4. secondary two and two - huge 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 10,
    }
  }
>
  <View
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <Text>
      secondary-1
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "16.6%",
      }
    }
  >
    <Text>
      support-1
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <Text>
      secondary-2
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "16.6%",
      }
    }
  >
    <Text>
      support-2
    </Text>
  </View>
</View>
`;
